--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,8 @@ dependencies:
   intl: ^0.19.0
   audioplayers: ^6.5.1
   vibration: ^3.1.4
-  shared_preferences: ^2.5.3
   flutter_launcher_icons: ^0.14.1
+  flutter_hooks: ^0.20.5
 
 dev_dependencies:
   flutter_test:
