--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   vibration: ^3.1.4
   flutter_launcher_icons: ^0.14.1
   flutter_hooks: ^0.20.5
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
