--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: shokei
 description: 推理文字冒险游戏《魔法少女ノ魔女裁判》的二次创作的移动应用
 publish_to: "none"
-version: 1.2.0+1
+version: 1.0.0
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
