--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.1
   flutter_hooks: ^0.20.5
   url_launcher: ^6.3.1
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
