--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
   intl: ^0.19.0
   audioplayers: ^6.5.1
   vibration: ^3.1.4
-  flutter_launcher_icons: ^0.14.1
   flutter_hooks: ^0.20.5
   url_launcher: ^6.3.1
   package_info_plus: ^9.0.0
@@ -23,6 +22,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: "^0.14.4"
 
 flutter:
   uses-material-design: true
@@ -31,3 +31,10 @@ flutter:
   assets:
     - assets/images/
     - assets/audio/
+
+flutter_launcher_icons:
+  image_path: "assets/images/splash_logo.png"
+  web:
+    generate: true
+    background_color: "#953949"
+    theme_color: "#4B0029"
