--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   intl: ^0.19.0
   audioplayers: ^6.5.1
   vibration: ^3.1.4
+  vibration_web: ^1.6.8
   flutter_hooks: ^0.20.5
   url_launcher: ^6.3.1
   package_info_plus: ^9.0.0
