--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_hooks: ^0.20.5
   url_launcher: ^6.3.1
   package_info_plus: ^9.0.0
+  device_info_plus: ^12.2.0
 
 dev_dependencies:
   flutter_test:
